--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">pro-mock example</string>
     <string name="action_settings">Settings</string>
+    <string name="hint_username">Username</string>
+    <string name="hint_password">Password</string>
+    <string name="hint_remember_me">Remember Me</string>
+    <string name="label_login">LogIn</string>
 </resources>
